Ajustes de iconos

--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
             <span>Cemax</span>
         </a>
         <!-- Menú de cabecera -->
-        <nav class="dg gtc-4 gg-1 maxw-min mar-a-0-a-a">
-            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-home"></i><span>Inicio</span></a>
-            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-briefcase"></i><span>Nosotros</span></a>
-            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-briefcase"></i><span>Servicios</span></a>
-            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-briefcase"></i><span>Contacto</span></a>
+        <nav class="dg gtc-5 gg-1-5 maxw-min mar-a-0-a-a ac-center ai-center">
+            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-home as-center"></i><span>Inicio</span></a>
+            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-users as-center"></i><span>Nosotros</span></a>
+            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-trowel as-center"></i><span>Servicios</span></a>
+            <a href="" class="dg gtc-1-a gg-5"><i class="fa fa-comments as-center"></i><span>Testimonios</span></a>
+            <a href="" class="dg gtc-1-a gg-5 bg-primary color-btn pad-05-2 br-100"><i
+                    class="fa fa-envelope as-center"></i><span>Contacto</span></a>
         </nav>
     </header>
     <div id="menu" class="hide">
         <button class="btn-menu fz-2 maxw-max"><i class="fa fa-bars"></i></button>
         <a href="#"><i class="fa fa-home"></i> Inicio</a>
-        <a href="#"><i class="fa fa-briefcase"></i> Nosotros</a>
-        <a href="#"><i class="fa fa-briefcase"></i> Servicios</a>
-        <a href="#"><i class="fa fa-briefcase"></i> Testimonios</a>
-        <a href="#"><i class="fa fa-briefcase"></i> Contacto </a>
+        <a href="#"><i class="fa fa-users"></i> Nosotros</a>
+        <a href="#"><i class="fa fa-trowel"></i> Servicios</a>
+        <a href="#"><i class="fa fa-comments"></i> Testimonios</a>
+        <a href="#"><i class="fa fa-envelope"></i> Contacto </a>
     </div>
     <section id="portada" class="dg ac-center ai-center">
         <div id="background3d"></div>
@@ -62,10 +64,22 @@
     </section>
     <!-- Servicios -->
     <section id="servicios" class="fz-1">
-        <h1 class="fz-3 pad-2 ta-center color-primary">Nuestros Servicios</h1>
-        <p class="lineH-1-5 pad-2 ">Todos nuestros servicios cuentan con garantía de calidad y profesionalimso.
-            Tabajamos siguiendo las normas de seguridad correspondientes para
-        </p>
+        <h1 class="fz-2 pad-1 ta-center color-primary">Nuestros Servicios</h1>
+        <div class="pad-2">
+
+            <p class="lineH-1-5">Ofrecemos soluciones integrales en albañilería y construcción, sanitaria y
+                electricidad, respaldadas por:
+            </p>
+            <div class="db"><i class="fa fa-check"></i> Garantía de calidad certificada en todos nuestros
+                trabajos</div>
+            <div clas="db mar-tp-05"><i class="fa fa-check"></i> Profesionalismo especializado con mano de obra
+                calificada
+            </div>
+            <div clas="db mar-tp-05"><i class="fa fa-check"></i> Estricto cumplimiento de normas de seguridad y
+                construcción
+                vigentes</div>
+
+        </div>
         <div id="servicios" class=" mar-0 pad-0">
             <div class="service border">
                 <article class="description">
