Efectos de sceroll para el header

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- Js -->
     <script src="./assets/js/menu.js"></script>
+    <script src="./assets/js/header.js"></script>
 </head>
 
 <body>
