--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </p>
         <button id="grant-permission">Permitir acceso</button>
     </div>
-    <script src="./assets/js/gyroscope_.js"></script>
+    <script src="./assets/js/gyroscope.js"></script>
 
 
 </body>
