Seccion de servicios agregada

--- a/index.html
+++ b/index.html
@@ -64,42 +64,76 @@
             <i class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
     </section>
     <!-- Servicios -->
-    <section id="servicios" class="fz-1" style="display:none;">
-        <h1 class="fz-2 pad-1 ta-center color-primary">Nuestros Servicios</h1>
-        <div class="pad-2">
-
-            <p class="lineH-1-5">Ofrecemos soluciones integrales en albañilería y construcción, sanitaria y
-                electricidad, respaldadas por:
-            </p>
-            <div class="db">
-                <i class="fa fa-check"></i> Garantía de calidad certificada en todos nuestros
-                trabajos
-            </div>
-            <div clas="db mar-tp-05 border-tp-light"><i class="fa fa-check"></i> Profesionalismo especializado con mano
-                de obra calificada
-            </div>
-            <div clas="db mar-tp-05">
-                <i class="fa fa-check"></i> Estricto cumplimiento de normas de seguridad y
-                construcción
-                vigentes
-            </div>
-
-        </div>
-        <div id="servicios" class=" mar-0 pad-0">
-            <div class="service border">
-                <article class="description">
-                    <h3 class="color-primary">Construcción</h3>
-                    <p>Levantamos estructuras sólidas y funcionales con materiales de alta calidad y técnicas avanzadas.
-                        Desde cimientos hasta
-                        acabados, garantizamos durabilidad, seguridad y un diseño adaptado a tus necesidades.</p>
-                </article>
-            </div>
-
-
-        </div>
+    <section id="servicios" class="">
+        <h1 class="color-primary fz-2 ta-center pad-2">Nuestros Servicios</h1>
+        <p class="pad-05-2 mar-bm-4">
+            Todos nuestros servicios se realizan con garantía de calidad y eficiencia. Nos aseguramos de que cada
+            trabajo se realice de manera profesional y cumpla con los más altos estándares de seguridad.
+        </p>
+        <div class="content-services dg gtc-2 ">
+            <!-- Instalacion -->
+            <article class="service br-10 w100 h100 pr dg gtc-2 construccion" id="service_1">
+                <div class="img br-10 "></div>
+                <div class="description dg ac-center box-shadow">
+                    <h3 class="color-primary">Construcción y remodelaciones</h3>
+                    <p class="lineH-1-5">Construimos y remodelamos espacios con calidad y diseño, adaptándonos a tus
+                        necesidades para lograr resultados
+                        funcionales y estéticos.</p>
+                    <a class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
+                        href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20construcci%C3%B3n%20y%remodelaciones%20que%20vi%20en%20tu%20web">
+                        <i class="fab fa-whatsapp"></i>
+                        Solicitar servicio</a>
+                </div>
+            </article>
+            <!-- Mantenimiento -->
+            <article class="service br-10 w100 h100 pr  dg gtc-2 terminaciones" id="service_2">
+                <div class="description dg ac-center box-shadow">
+                    <h3 class="color-primary">Acabados y terminaciones</h3>
+                    <p>
+                        Realzamos cada espacio con acabados y terminaciones de alta calidad, cuidando cada detalle para
+                        un resultado impecable y duradero
+                    </p>
+                    <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
+                        href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20acabados%20y%20terminaciones%20que%20vi%20en%20tu%20web"><i
+                            class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                </div>
+                <div class="img br-10"></div>
+            </article>
+            <!-- Reparaciones -->
+            <article class="service br-10 w100 h100 pr dg gtc-2 sanitaria" id="service_3">
+                <div class="img br-10"></div>
+                <div class="description dg ac-center box-shadow">
+                    <h3 class="color-primary">Sanitaria y Fontanería</h3>
+                    <p>
+                        Brindamos soluciones duraderas en sanitaria y fontanería, con instalaciones y materiales de
+                        alta calidad para evitar futuras pérdidas.
+                    </p>
+                    <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
+                        href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20para%20sanitaria%20y%20fontaner%C3%ADa%20que%20vi%20en%20tu%20web"><i
+                            class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                </div>
+            </article>
+            <!-- Recargas -->
+            <article class="service br-10 w100 h100 pr dg gtc-2 electricidad" id="service_4">
+                <div class="description dg ac-center box-shadow">
+                    <h3 class="color-primary">Electricidad e instalaciones</h3>
+                    <p>
+                        Instalamos y reparamos sistemas eléctricos de forma segura, y con garantia
+                        de durabilidad, evitando futuras fallas, y siguiendo las normas de seguridad vigentes.
+                    </p>
+                    <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
+                        href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20el%20servicio%20para%20recarga%20de%20l%C3%ADquido%20refrigerante">
+                        <i class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                </div>
+                <div class="img br-10"></div>
+            </article>
+        </div><!-- fin content -->
     </section>
+    <!-- Proyectos destacados -->
+    <section id="proyectos" class="mar-tp-2">
+        <h1 class="title pad-1-2 fz-2 ta-center">Proyectos destacados</h1>
 
-
+    </section>
 
     <div class="modal-backdrop"></div>
     <div class="permission-modal">
