--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cemax - Tansformamos espacios</title>
-    <link rel="shortcut icon" href="./assets/img/brand/isotype_black.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/default.css">
-    <link rel="stylesheet" href="./assets/css/grid.css">
-    <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/portada.css">
-    <link rel="stylesheet" href="./assets/css/menu.css">
-    <link rel="stylesheet" href="./assets/css/servicios.css">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -23,25 +17,48 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js"
         integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>
-
+    <link rel="shortcut icon" href="./assets/img/brand/isotype_black.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/default.css">
+    <link rel="stylesheet" href="./assets/css/grid.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/portada.css">
+    <link rel="stylesheet" href="./assets/css/menu.css">
+    <link rel="stylesheet" href="./assets/css/servicios.css">
+    <link rel="stylesheet" href="./assets/css/sobremi.css">
+    <link rel="stylesheet" href="./assets/css/gallery.css">
 
 
     <!-- Js -->
     <script src="./assets/js/menu.js"></script>
     <script src="./assets/js/header.js"></script>
+    <script src="./assets/js/gallery.js"></script>
+    <style>
+        .hexagon {
+            width: 200px;
+            height: 115.47px;
+            /* Height of a regular hexagon with side length 100px (200px width) */
+            background-color: #fbc26b;
+            /* Example color */
+            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+        }
+    </style>
 </head>
 
 <body>
+
     <header class="dg gtc-min-a pad-1-2">
         <a href="#" class="dg gtc-min-a fz-2 ac-center ai-center">
             <i class="fa fa-cubes as-center"></i>
             <span class="fw-8">Cemax</span>
         </a>
         <!-- Menú de cabecera -->
-        <nav class="dg gtc-5 gg-1-5 maxw-min mar-a-0-a-a ac-center ai-center">
+        <nav class="dg gtc-6 gg-1-5 maxw-min mar-a-0-a-a ac-center ai-center">
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-home as-center"></i><span> Inicio</span></a>
+            <a href="#servicios" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span>
+                    Servicios</span></a>
+            <a href="#project_referer" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span>
+                    Proyectos</span></a>
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-users as-center"></i><span> Nosotros</span></a>
-            <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span> Servicios</span></a>
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-comments as-center"></i><span> Testimonios</span></a>
             <a href="" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100"><i
                     class="fa fa-envelope as-center"></i><span>Contacto</span></a>
@@ -49,9 +66,10 @@
     </header>
     <div id="menu" class="hide">
         <button class="btn-menu fz-2 maxw-max"><i class="fa fa-bars"></i></button>
-        <a href="#"><i class="fa fa-home"></i> Inicio</a>
+        <a href="#portada"><i class="fa fa-home"></i> Inicio</a>
+        <a href="#servicios"><i class="fa fa-trowel"></i> Servicios</a>
+        <a href="#project_referer"><i class="fa fa-trowel"></i> Proyectos</a>
         <a href="#"><i class="fa fa-users"></i> Nosotros</a>
-        <a href="#"><i class="fa fa-trowel"></i> Servicios</a>
         <a href="#"><i class="fa fa-comments"></i> Testimonios</a>
         <a href="#"><i class="fa fa-envelope"></i> Contacto </a>
     </div>
@@ -70,6 +88,7 @@
             Todos nuestros servicios se realizan con garantía de calidad y eficiencia. Nos aseguramos de que cada
             trabajo se realice de manera profesional y cumpla con los más altos estándares de seguridad.
         </p>
+
         <div class="content-services dg gtc-2 ">
             <!-- Instalacion -->
             <article class="service br-10 w100 h100 pr dg gtc-2 construccion" id="service_1">
@@ -131,10 +150,100 @@
     </section>
     <!-- Proyectos destacados -->
     <section id="proyectos" class="mar-tp-2">
+        <div id="project_referer"></div>
         <h1 class="title pad-1-2 fz-2 ta-center">Proyectos destacados</h1>
+        <p class="linH-1-5 fz-1 pad-2">
+            Estos son algunos de nuestros proyectos más destacados. Desde reformas y ampliaciones hasta
+            construcciones desde cero. Cada trabajo refleja nuestro compromiso con la calidad, la precisión y la
+            satisfacción del cliente. Descubre cómo transformamos ideas en realidad con nuestra experiencia y
+            dedicación.
+        </p>
+        <section id="gallery_content" class="fa">
+            <button class="prev"><i class="fa fa-angle-left"></i></button>
+            <div id="gallery">
+                <img src="./assets/img/proyectos/one.jpg" alt="Foto de living">
+                <img src="./assets/img/proyectos/two.jpg" alt="Foto de baño">
+                <img src="./assets/img/proyectos/three.jpg" alt="Foto de cuarto">
+                <img src="./assets/img/proyectos/four.jpg" alt="Foto de cocina">
+                <img src="./assets/img/proyectos/five.jpg" alt="Foto de escaleras">
 
+            </div>
+            <button class="next"><i class="fa fa-angle-right"></i></button>
+        </section>
+    </section><!-- fin proyectos destacados-->
+
+    <!-- Nosotros -->
+    <section id="sobremi">
+        <h1 class="title ta-center color-primary pad-2 fz-2 mar-tp-2">Sobre mi</h1>
+        <div class="dg gtc-2 gar-min pad-1-0 ac-center ai-center gg-1 presentacion">
+
+            <p class="pad-2 lineH-1-5">Soy un albañil comprometido con la calidad y la satisfacción de
+                mis clientes. Con mas de 10 años de experiencia en construcción, reformas y mantenimiento, trabajo
+                con dedicación para garantizar resultados sólidos y duraderos. Me especializo en brindar soluciones a
+                medida, adaptándome a cada proyecto con profesionalismo y atención al detalle. Mi prioridad es ofrecer
+                un servicio confiable y eficiente, cumpliendo siempre con los más altos estándares del rubro.</p>
+            <div class="persona gg-1 gtc-min-a gar-min maxh-min dg box maxw-max box-shadow border-light mar-1-a">
+                <img src="./assets/img/yo.png" alt="Fotocarné">
+                <span class="name db as-center">Kevin Martínez</span>
+                <p class="oficios mar-0">
+                    <span>Albañil</span>
+                    <span>Sanitario</span>
+                    <span>Electricista</span>
+                </p>
+                <div class="contactos dg gar-min gc-1-3 gg-10 mar-0">
+                    <a href="tel:+59898760446" class="db mar-0"><i class="fa fa-phone"></i> 098 760 446</a>
+                    <a href="mailto:kevinmartinez08.97@hotmail.com" class="db mar.0"><i class="fa fa-envelope"></i>
+                        kevinmartinez@hotmail.com</a>
+                </div>
+            </div>
+        </div>
     </section>
-
+    <section id="nosotros">
+        <h2 class="title ta-center color-primary pad-2 fz-2 mar-tp-2">Me diferencia:</h2>
+        <div class="destacados dg gtc-2 gg-10 pad-1">
+            <article class="box box-shadow-tp-lt br-10 pad-1">
+                <i class="fa fa-circle-check db fz-2 color-primary mar-1 ta-center"></i>
+                <span class="fw-6 db ta-center mar-bm-1"> Soluciones a medida</span>
+                Cada detalle se adapta a las preferencias y necesidades del cliente, logrando espacios funcionales,
+                cómodos y personalizados.
+            </article>
+            <article class="box box-shadow-tp-rt br-10 pad-1">
+                <i class="fa fa-screwdriver-wrench db fz-2 color-primary mar-1 ta-center"></i>
+                <span class="fw-6 db ta-center mar-bm-1">
+                    Experiencia y compromiso
+                </span>
+                Un enfoque serio y dedicado en cada obra, asegurando soluciones eficientes y bien planificadas desde el
+                inicio hasta la entrega.
+            </article>
+            <article class="box box-shadow-bm-lt br-10 pad-1">
+                <i class="fa fa-handshake-simple db fz-2 color-primary mar-1 ta-center"></i>
+                <span class="fw-6 db ta-center mar-bm-1">
+                    Calidad y profesionalismo
+                </span>
+                La precisión en cada etapa del trabajo garantiza acabados impecables y una construcción segura,
+                cumpliendo altos estándares.
+            </article>
+            <article class="box box-shadow-bm-rt br-10 pad-1">
+                <i class="fa fa-shield-halved db fz-2 color-primary mar-1 ta-center"></i>
+                <span class="fw-6 db ta-center mar-bm-1">
+                    Confianza y reposnabilidad
+                </span>
+                La honestidad y el respeto por los acuerdos permiten una relación transparente, brindando tranquilidad y
+                seguridad en cada proyecto.
+            </article>
+            <article class="box box-shadow-bm-rt br-10 pad-1 gc-1-3">
+                <i class="fa fa-file-invoice-dollar db fz-2 color-primary mar-1 ta-center"></i>
+                <span class="fw-6 db ta-center mar-bm-1">
+                    Presupuestos sin costo
+                </span>
+                Solicitá tu presupuesto sin compromiso. Evaluamos tu proyecto con seriedad y te brindamos
+                una cotización clara y ajustada a tus necesidades. Nos trasladamos al lugar para evaluar tu solicitud,
+                sin costo dentro de Montevideo. Mi objetivo es ofrecerte la mejor solución, a la mejor relación
+                calidad-precio<br>
+                ¡Consultanos hoy mismo!
+            </article>
+        </div>
+    </section><!-- fin Nosotros -->
     <div class="modal-backdrop"></div>
     <div class="permission-modal">
         <h2 class="pad-1">¿Permitir acceso al giroscopio?</h2>
