--- a/index.html
+++ b/index.html
@@ -4,7 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cemax - Tansformamos espacios</title>
+    <title>Cemax - Tansformamos tus espacios</title>
+    <meta charset="UTF-8">
+    <title>Servicios de Construcción y Remodelación Integral | Cemax</title>
+
+    <!-- Meta Description (enfocada en todos los servicios) -->
+    <meta name="description"
+        content="Empresa especializada en construcción, remodelación, fontanería, electricidad y pintura para hogares y negocios. Trabajos garantizados, presupuesto gratis y atención inmediata.">
+
+    <!-- Meta Keywords (agrupando todos los servicios) -->
+    <meta name="keywords"
+        content="albañilería, construcción de casas, remodelación de baños, fontanería profesional, electricista certificado, pintura de interiores, ampliación de viviendas, acabados de lujo, servicios sanitarios, reformas para negocios">
+
+    <!-- Canonical (para evitar duplicados) -->
+    <link rel="canonical" href="https://www.tudominio.com">
+
+    <!-- Viewport (responsive design) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph (compartir en redes sociales) -->
+    <meta property="og:title" content="[Nombre de la Empresa] | Expertos en Construcción y Remodelación">
+    <meta property="og:description"
+        content="Transformamos tu hogar o negocio con servicios integrales: albañilería, fontanería, electricidad y más. ¡Solicita tu presupuesto hoy!">
+    <meta property="og:image" content="https://www.tudominio.com/img/og-image-landing.jpg">
+    <meta property="og:url" content="https://www.tudominio.com">
+    <meta property="og:type" content="website">
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Cemax",
+        "image": "https://www.tudominio.com/img/brand/isotype_black.png",
+        "description": "Servicios profesionales de construcción, remodelación, fontanería y electricidad para hogares y negocios.",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Colonia 3814",
+            "addressLocality": "Montevideo",
+            "addressRegion": "Montevideo, Uruguay",
+            "postalCode": "11000"
+        },
+        "telephone": "+59898760446",
+        "priceRange": "5000 - 500000",
+        "serviceArea": {
+            "@type": "AdministrativeArea",
+            "name": "Montevideo"
+        },
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Servicios de Construcción",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "name": "Construcción y Remodelaciones"
+                },
+                {
+                    "@type": "Offer",
+                    "name": "Sanitaria y Fontanería"
+                },
+                {
+                    "@type": "Offer",
+                    "name": "Instalaciones Eléctricas"
+                },
+                {
+                    "@type": "Offer",
+                    "name": "Acabados y Terminaciones"
+                }
+            ]
+        }
+    }
+    </script>
+
+
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -26,21 +96,14 @@
     <link rel="stylesheet" href="./assets/css/servicios.css">
     <link rel="stylesheet" href="./assets/css/sobremi.css">
     <link rel="stylesheet" href="./assets/css/gallery.css">
+    <link rel="stylesheet" href="./assets/css/testimonios.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 
 
     <!-- Js -->
     <script src="./assets/js/menu.js"></script>
     <script src="./assets/js/header.js"></script>
     <script src="./assets/js/gallery.js"></script>
-    <style>
-        .hexagon {
-            width: 200px;
-            height: 115.47px;
-            /* Height of a regular hexagon with side length 100px (200px width) */
-            background-color: #fbc26b;
-            /* Example color */
-            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-        }
     </style>
 </head>
 
@@ -56,11 +119,11 @@
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-home as-center"></i><span> Inicio</span></a>
             <a href="#servicios" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span>
                     Servicios</span></a>
-            <a href="#project_referer" class="dg gtc-min-a gg-5"><i class="fa fa-trowel as-center"></i><span>
+            <a href="#project_referer" class="dg gtc-min-a gg-5"><i class="fa fa-trowel-bricks as-center"></i><span>
                     Proyectos</span></a>
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-users as-center"></i><span> Nosotros</span></a>
             <a href="" class="dg gtc-min-a gg-5"><i class="fa fa-comments as-center"></i><span> Testimonios</span></a>
-            <a href="" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100"><i
+            <a href="" class="dg gtc-min-a gg-5 bg-button color-btn pad-05-2 br-100" id="contact_header_btn"><i
                     class="fa fa-envelope as-center"></i><span>Contacto</span></a>
         </nav>
     </header>
@@ -101,7 +164,7 @@
                     <a class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20construcci%C3%B3n%20y%remodelaciones%20que%20vi%20en%20tu%20web">
                         <i class="fab fa-whatsapp"></i>
-                        Solicitar servicio</a>
+                        Solicitar presupuesto</a>
                 </div>
             </article>
             <!-- Mantenimiento -->
@@ -114,7 +177,7 @@
                     </p>
                     <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20de%20acabados%20y%20terminaciones%20que%20vi%20en%20tu%20web"><i
-                            class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                            class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
                 </div>
                 <div class="img br-10"></div>
             </article>
@@ -129,20 +192,20 @@
                     </p>
                     <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20presupuesto%20para%20sanitaria%20y%20fontaner%C3%ADa%20que%20vi%20en%20tu%20web"><i
-                            class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                            class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
                 </div>
             </article>
             <!-- Recargas -->
             <article class="service br-10 w100 h100 pr dg gtc-2 electricidad" id="service_4">
                 <div class="description dg ac-center box-shadow">
-                    <h3 class="color-primary">Electricidad e instalaciones</h3>
+                    <h3 class="color-primary">Instalaciones eléctricas</h3>
                     <p>
                         Instalamos y reparamos sistemas eléctricos de forma segura, y con garantia
                         de durabilidad, evitando futuras fallas, y siguiendo las normas de seguridad vigentes.
                     </p>
                     <a target="_blank" class="btn-primary border-light maxw-max mar-a-0-a-a fz-1 pad-05-1 db br-100"
                         href="https://wa.me/+59894746115?text=Hola,%20me%20gustar%C3%ADa%20solicitar%20el%20servicio%20para%20recarga%20de%20l%C3%ADquido%20refrigerante">
-                        <i class="fab fa-whatsapp"></i> Solicitar servicio</a>
+                        <i class="fab fa-whatsapp"></i> Solicitar presupuesto</a>
                 </div>
                 <div class="img br-10"></div>
             </article>
@@ -244,6 +307,64 @@
             </article>
         </div>
     </section><!-- fin Nosotros -->
+    <section id="testimonios">
+        <h1 class="fz-2">Testimonios</h1>
+        <p>Conocé algunas de las reseñas de nuestros clientes sobre las obras que he realizado.
+            Ellos ya confiaron en mi trabajo. Vos también podés sumarte a la comunidad de clientes satisfechos.</p>
+        <section>
+
+            <div class="box">
+                <img src="./assets/img/testimonios/user1.png" class="border-light" alt="Foto de perfil">
+                <p class="name">Matías, 25 años</p>
+                <p class="comentario">Los llamé hoy y en menos de 2 horas ya estaba disfrutando mi nuevo aire
+                    acondicionado. Super recomendables! </p>
+            </div>
+            <div class="box">
+                <img src="./assets/img/testimonios/user2.png" class="border-light" alt="Foto de perfil">
+                <p class="name">Mariana, 34 años</p>
+                <p class="comentario">El servicio fue excelente. Me explicaron todo con claridad y dejaron el equipo
+                    funcionando perfectamente. ¡Muy
+                    profesionales!
+                </p>
+            </div>
+            <div class="box">
+                <img src="./assets/img/testimonios/user3.png" class="border-light" alt="Foto de perfil">
+                <p class="name">Martín, 56 años</p>
+                <p class="comentario">Tuve un problema con mi aire acondicionado en pleno verano y lo solucionaron el
+                    mismo día. Gran atención y muy buen trabajo.</p>
+            </div>
+        </section>
+    </section>
+    <footer class="pad-1">
+        <div class="wave"></div>
+        <div class="container dg gtc-2 gar-min gg-1 mar-tp-1">
+            <article class="locacion maxw-max br-10 mar-a-0-a-a gr-1-3">
+                <h3 class="pad-0-1 ta-center">¿Donde estamos?</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9255.379772065602!2d-56.170827541851075!3d-34.89965061989336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2suy!4v1743511970993!5m2!1ses-419!2suy"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p class="mar-0 ta-center">Colonia 3814, Montevideo.</p>
+            </article>
+            <div class="rrss gar-min maxw-max maxh-min">
+                <h3 class="pad-1">Seguinos en nuestras redes</h3>
+                <id class="dg gtc-4 gg-1">
+                    <a href=""><i class="fab fa-facebook fz-2"></i></a>
+                    <a href=""><i class="fab fa-instagram fz-2"></i></a>
+                    <a href=""><i class="fab fa-tiktok fz-2"></i></a>
+                    <a href=""><i class="fab fa-x-twitter fz-2"></i></a>
+                </id>
+            </div>
+            <div class="horarios maxw-max">
+                <h3 class="pad-1">Horarioas de atención</h3>
+                <p>De lunes a viernes de 07:00 a 17:00hs</p>
+                <p>Sábados de 09:00 a 15:00hs</p>
+            </div>
+        </div>
+        <div class="footer">Copyright 2025. All right reserved. Created by: <a href="">Kevin Martínez</a></div>
+    </footer>
+
+
     <div class="modal-backdrop"></div>
     <div class="permission-modal">
         <h2 class="pad-1">¿Permitir acceso al giroscopio?</h2>
